@@ -1,14 +1,19 @@
+/*
+ * Copyright 2000-2025 Vaadin Ltd.
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License"); you may not
+ * use this file except in compliance with the License. You may obtain a copy of
+ * the License at
+ *
+ * http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
+ * WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
+ * License for the specific language governing permissions and limitations under
+ * the License.
+ */
 package com.vaadin.base.devserver.startup;
-
-import static com.vaadin.flow.server.Constants.COMPATIBILITY_RESOURCES_FRONTEND_DEFAULT;
-import static com.vaadin.flow.server.Constants.CONNECT_JAVA_SOURCE_FOLDER_TOKEN;
-import static com.vaadin.flow.server.Constants.RESOURCES_FRONTEND_DEFAULT;
-import static com.vaadin.flow.server.Constants.RESOURCES_THEME_JAR_DEFAULT;
-import static com.vaadin.flow.server.Constants.TARGET;
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertTrue;
-import static org.mockito.Mockito.never;
-import static org.mockito.Mockito.times;
 
 import java.io.File;
 import java.io.FileInputStream;
@@ -21,6 +26,7 @@ import java.net.URL;
 import java.net.URLConnection;
 import java.net.URLStreamHandler;
 import java.nio.charset.StandardCharsets;
+import java.nio.file.Files;
 import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.Collection;
@@ -33,18 +39,7 @@ import java.util.Map;
 import java.util.Set;
 import java.util.function.Function;
 
-import com.vaadin.flow.component.dependency.JsModule;
-import com.vaadin.flow.component.page.AppShellConfigurator;
-import com.vaadin.flow.di.Lookup;
-import com.vaadin.flow.router.Route;
-import com.vaadin.flow.server.InitParameters;
-import com.vaadin.flow.server.LoadDependenciesOnStartup;
-import com.vaadin.flow.server.frontend.EndpointGeneratorTaskFactory;
-import com.vaadin.flow.server.frontend.FrontendUtils;
-import com.vaadin.flow.server.startup.ApplicationConfiguration;
-import com.vaadin.flow.server.startup.VaadinInitializerException;
-
-import org.apache.commons.io.FileUtils;
+import net.jcip.annotations.NotThreadSafe;
 import org.junit.Assert;
 import org.junit.Rule;
 import org.junit.Test;
@@ -54,7 +49,27 @@ import org.mockito.ArgumentCaptor;
 import org.mockito.MockedStatic;
 import org.mockito.Mockito;
 
-import net.jcip.annotations.NotThreadSafe;
+import com.vaadin.flow.component.dependency.JsModule;
+import com.vaadin.flow.component.page.AppShellConfigurator;
+import com.vaadin.flow.di.Lookup;
+import com.vaadin.flow.di.ResourceProvider;
+import com.vaadin.flow.router.Route;
+import com.vaadin.flow.server.InitParameters;
+import com.vaadin.flow.server.LoadDependenciesOnStartup;
+import com.vaadin.flow.server.frontend.EndpointGeneratorTaskFactory;
+import com.vaadin.flow.server.frontend.FrontendUtils;
+import com.vaadin.flow.server.startup.ApplicationConfiguration;
+import com.vaadin.flow.server.startup.VaadinInitializerException;
+
+import static com.vaadin.flow.server.Constants.COMPATIBILITY_RESOURCES_FRONTEND_DEFAULT;
+import static com.vaadin.flow.server.Constants.CONNECT_JAVA_SOURCE_FOLDER_TOKEN;
+import static com.vaadin.flow.server.Constants.RESOURCES_FRONTEND_DEFAULT;
+import static com.vaadin.flow.server.Constants.RESOURCES_THEME_JAR_DEFAULT;
+import static com.vaadin.flow.server.Constants.TARGET;
+import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertTrue;
+import static org.mockito.Mockito.never;
+import static org.mockito.Mockito.times;
 
 @NotThreadSafe
 public class DevModeInitializerTest extends DevModeInitializerTestBase {
@@ -312,10 +327,10 @@ public class DevModeInitializerTest extends DevModeInitializerTestBase {
     }
 
     private String getFlowGeneratedImports() throws IOException {
-        return FileUtils.readFileToString(
-                FrontendUtils.getFlowGeneratedImports(new File(npmFolder,
-                        FrontendUtils.DEFAULT_FRONTEND_DIR)),
-                StandardCharsets.UTF_8);
+        return Files.readString(FrontendUtils
+                .getFlowGeneratedImports(
+                        new File(npmFolder, FrontendUtils.DEFAULT_FRONTEND_DIR))
+                .toPath(), StandardCharsets.UTF_8);
     }
 
     @Test
@@ -612,14 +627,17 @@ public class DevModeInitializerTest extends DevModeInitializerTestBase {
         List<URL> urls = new ArrayList<>();
         urls.add(jar);
 
-        // Create mock loader with the single jar to be found
-        ClassLoader classLoader = Mockito.mock(ClassLoader.class);
-        Mockito.when(classLoader.getResources(resourcesFolder))
-                .thenReturn(Collections.enumeration(urls));
+        // Create mock resource provider with the single jar to be found
+        ResourceProvider resourceProvider = Mockito
+                .mock(ResourceProvider.class);
+        Mockito.when(lookup.lookup(ResourceProvider.class))
+                .thenReturn(resourceProvider);
+        Mockito.when(resourceProvider.getApplicationResources(resourcesFolder))
+                .thenReturn(urls);
 
         // load jars from classloader
         List<File> jarFilesFromClassloader = new ArrayList<>(DevModeInitializer
-                .getFrontendLocationsFromClassloader(classLoader));
+                .getFrontendLocationsFromResourceProvider(resourceProvider));
 
         // Assert that jar was found and accepted
         assertEquals("One jar should have been found and added as a File", 1,
@@ -641,14 +659,18 @@ public class DevModeInitializerTest extends DevModeInitializerTestBase {
     private void loadingFsResources_allFilesExist(Collection<URL> urls,
             String resourcesFolder)
             throws IOException, VaadinInitializerException {
-        // Create mock loader with the single jar to be found
-        ClassLoader classLoader = Mockito.mock(ClassLoader.class);
-        Mockito.when(classLoader.getResources(resourcesFolder))
-                .thenReturn(Collections.enumeration(urls));
+
+        // Create mock resource provider with the single jar to be found
+        ResourceProvider resourceProvider = Mockito
+                .mock(ResourceProvider.class);
+        Mockito.when(lookup.lookup(ResourceProvider.class))
+                .thenReturn(resourceProvider);
+        Mockito.when(resourceProvider.getApplicationResources(resourcesFolder))
+                .thenReturn(List.copyOf(urls));
 
         // load jars from classloader
         List<File> locations = new ArrayList<>(DevModeInitializer
-                .getFrontendLocationsFromClassloader(classLoader));
+                .getFrontendLocationsFromResourceProvider(resourceProvider));
 
         // Assert that resource was found and accepted
         assertEquals("One resource should have been found and added as a File",
